--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-color: #282c34;
+
 }
 
 .App-logo {
@@ -14,19 +16,34 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  display: inline-block;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .App-link {
   color: #61dafb;
 }
+
+.square {
+  display: flex;
+  margin: 3px;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  background-color: black;
+  color: yellow;
+  width: 200px;
+  height: 200px;
+}
+
 
 @keyframes App-logo-spin {
   from {
