--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,14 @@
+body{
+  background-color: #282c34;
+}
+
+
 .App {
   text-align: center;
   background-color: #282c34;
+  color: white;
+  font-size: calc(10px + 2vmin);
+
 
 }
 
@@ -16,7 +24,7 @@
 }
 
 .App-header {
-  min-height: 100vh;
+  /* min-height: 100vh; */
   display: inline-block;
   align-items: center;
   justify-content: center;
@@ -26,6 +34,8 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  background-color: #282c34;
+
 }
 
 .App-link {
