--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,27 @@ html, body{
   }
 }
 
+.To-do {
+  overflow: hidden;
+  /* width: 500px;
+  height: 40vmin; */
+  /* display: flex; */
+  justify-content: center;
+  align-items: center;
+  display: inline-block;
+  background-color: white;
+  color: black;
+  border-radius: 5px;
+  padding: 10px;
+  padding-bottom: 30px;
+  margin: 30px;
+
+
+
+}
+
+
+
 .App-header {
   /* min-height: 100vh; */
   display: inline-block;
@@ -31,8 +52,6 @@ html, body{
   font-size: calc(10px + 2vmin);
   color: white;
   display: flex;
-  justify-content: center;
-  align-items: center;
   text-align: center;
   background-color: #282c34;
 
