--- a/src/App.css
+++ b/src/App.css
@@ -27,8 +27,14 @@ ul {
   padding-left: 0;
 }
 
+label, button, input {
+  margin: 5px
+}
+
 .To-do {
   overflow: hidden;
+  text-align: left;
+  border-style: inset;
   /* width: 500px;
   height: 40vmin; */
   /* display: flex; */
@@ -38,7 +44,7 @@ ul {
   background-color: rgb(228, 228, 228);
   color: black;
   border-radius: 5px;
-  padding: 10px;
+  padding: 30px;
   padding-bottom: 30px;
   margin: 30px;
 
