--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,28 @@ label, button, input {
   margin: 5px
 }
 
+img {
+  height: 400px;
+  width: 400px;
+  padding-bottom: 15px;
+}
+
+.starType {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  width: 40%;
+  overflow: hidden;
+  background-color: rgb(228, 228, 228);
+  color: black;
+  border-radius: 5px;
+  padding: 30px;
+  padding-bottom: 30px;
+  margin-bottom: 30px;
+
+}
+
+
 .To-do {
   overflow: hidden;
   text-align: left;
