--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,6 +2,17 @@ html, body{
   background-color: #282c34;
 }
 
+h1 {
+  width: 700px;
+  border-style: solid;
+  border-width: 2px;
+  border-color: white;
+  /* padding: 20px; */
+  margin-top: 80px;
+  margin-left: auto;
+  margin-right: auto;
+
+}
 
 .App {
   text-align: center;
@@ -117,8 +128,10 @@ img {
   }
 }
 
-/* 
+
 .navBar {
-  text-align: center;
-  justify-content: center;
-} */
+  /* text-align: center;
+  justify-content: center; */
+  margin-bottom: 80px;
+  padding-bottom: 50px;
+}
