--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,13 +2,14 @@ html, body{
   background-color: #282c34;
 }
 
-h1 {
-  width: 700px;
+.h1-title {
+  /* width: 700px; */
   border-style: solid;
   border-width: 2px;
   border-color: white;
   /* padding: 20px; */
   margin-top: 80px;
+  padding-bottom: 10px;
   margin-left: auto;
   margin-right: auto;
 
