--- a/src/App.css
+++ b/src/App.css
@@ -15,14 +15,14 @@ html, body{
 
 }
 
-/* .App {
+.App {
   text-align: center;
   background-color: #282c34;
   color: white;
   font-size: calc(10px + 2vmin);
 
 
-} */
+}
 
 .App-logo {
   height: 40vmin;
