--- a/src/App.css
+++ b/src/App.css
@@ -94,9 +94,36 @@ img {
   align-items: center;
   text-align: center;
   min-height: 100vh;
+}
+
+.overlay {
+  min-height: 100vh;
+  background: rgba(0, 0, 0, 0.938);
+  /* opacity: .5; */
+
+}
+.landingPageBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: aqua;
   border-style: solid;
   border-color: aliceblue;
+  
+
+  width: 300px;
+  height: 200px;
+    
+  position: absolute;
+  top:0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+    
+  margin: auto;
 }
+
 
 .App-header {
   /* min-height: 100vh; */
