--- a/src/App.css
+++ b/src/App.css
@@ -88,32 +88,57 @@ img {
   margin: 30px;
 }
 
-.HomedivLinks {
+/* .HomedivLinks {
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   min-height: 100vh;
+  position: relative;
+
+} */
+
+.homelink1 {
+  padding-top: 170px;
 }
 
-.overlay {
+.homelink2 {
+  padding-top: 20px;
+
+}
+
+.link {
+  color: white;
+  text-decoration: none;
+  font-size: x-large;
+  /* background-color: #282c34; */
+  padding: 4px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+
+
+.homeRow {
+  /* opacity over home image */
+  background-color: rgba(0, 0, 0, 0.2);
+  overflow: hidden;
   min-height: 100vh;
-  background: rgba(0, 0, 0, 0.938);
-  /* opacity: .5; */
 
 }
+
 .landingPageBox {
-  display: flex;
+  display: block;
   justify-content: center;
   align-items: center;
   text-align: center;
-  color: aqua;
   border-style: solid;
   border-color: aliceblue;
+  background-color: rgba(0, 0, 0, 0.5);
+
   
 
-  width: 300px;
-  height: 200px;
+  width: 420px;
+  height: 500px;
     
   position: absolute;
   top:0;
