--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,14 @@
     float: left;
     padding: 50px;
     background-color: #0A1F3F;
-    
+}
+
+.nasaVideoDiv {
+    width: 50%;
+    float: left;
+    padding: 50px;
+    background-color: #0A1F3F;
+    height: 700px;
 }
 
 
@@ -32,6 +39,9 @@
 
 .home-link {
 color: white;
+display: inline-block;
+/* position: absolute; */
+
 }
 
 .nasaTitle {
@@ -104,7 +114,7 @@ label, button, input {
 } */
 
 .starType {
-  margin-left: auto;
+  /* margin-left: auto;
   margin-right: auto;
   display: block;
   width: 40%;
@@ -114,10 +124,58 @@ label, button, input {
   border-radius: 5px;
   padding: 30px;
   padding-bottom: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 30px; */
+
+  width: 50%;
+  float: left;
+  padding: 50px;
+  background-color: #0A1F3F;
+  /* border-style: solid;
+  border-color: #FFEDBC;
+  border-width: 2px; */
 
 }
 
+/* .StarPageHead {
+display: inline-block;
+} */
+
+.Star {
+  font-family: 'Righteous', cursive;
+  color: #871D60 ;
+  line-height: 1.7;
+  font-size: 25px;
+  background-color: #0A1F3F;
+  min-height: 100vh;
+}
+
+.StarHeader {
+  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 100px;
+}
+
+.StarInputs {
+  width: 50%;
+  float: left;
+  padding: 50px;
+  background-color: #0A1F3F;
+}
+
+.formInputBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* .starTypeComponent {
+  width: 50%;
+  float: left;
+  padding: 50px;
+  background-color: #0A1F3F;
+} */
 
 .To-do {
   overflow: hidden;
