--- a/src/components/photoBox.css
+++ b/src/components/photoBox.css
@@ -5,6 +5,6 @@
   margin: 0 auto;
   position: relative;
   cursor: pointer;
-  border-style: solid;
-  border-color: red
+  /* border-style: solid;
+  border-color: red */
 ;}
