--- a/src/components/gallery.css
+++ b/src/components/gallery.css
@@ -40,3 +40,11 @@ bottom: 0;
 position: absolute; */
 /* margin: -4px; */
 }
+
+.popupStyle img{
+    background-image: center;
+  background-size: cover;
+  width:100%;
+  height: 500px;
+  margin-top: 0%;
+}
