--- a/src/components/popup.css
+++ b/src/components/popup.css
@@ -2,28 +2,36 @@
   position: fixed;
   background: #00000050;
   width: 100%;
-  height: 100vh;
+  height: 900px;
   top: 0;
   left: 0;
   /* bug fixed!! simple z-index 1, */
   z-index: 1;
+  overflow: hidden;
+
 }
 
-.popup-box {
+.popup-box, img {
   position: relative;
   width: 70%;
   margin: 0 auto;
   height: auto;
-  max-height: 70vh;
+  /* max-height: 70vh; */
   margin-top: calc(100vh - 85vh - 20px);
   background: #fff;
   border-radius: 4px;
-  padding: 20px;
-  border: 1px solid #999;
+  /* padding: 20px; */
+  /* border: 1px solid #999; */
   overflow: auto;
-
+  /* overflow: hidden; */
 }
- 
+
+.popup-box::-webkit-scrollbar {
+  display: none;
+}
+
+
+
 .close-icon {
   content: 'x';
   cursor: pointer;
