--- a/src/components/gallery.css
+++ b/src/components/gallery.css
@@ -42,9 +42,15 @@ position: absolute; */
 }
 
 .popupStyle img{
-    background-image: center;
+    /* background-image: center; */
   background-size: cover;
   width:100%;
   height: 500px;
   margin-top: 0%;
+  /* background-image: linear-gradient( rgba(245, 246, 252, 0.52), rgba(117, 19, 93, 0.73)); */
+
 }
+
+/* .popupStyle{
+  background-image: linear-gradient( rgba(245, 246, 252, 0.52), rgba(117, 19, 93, 0.73));
+} */
