--- a/src/components/popup.css
+++ b/src/components/popup.css
@@ -1,11 +1,12 @@
 .popup-box-container {
   position: fixed;
-  background: #00000050;
+  background: #00000070;
   width: 100%;
-  height: 900px;
+  height: 100vh;
   top: 0;
   left: 0;
   /* bug fixed!! simple z-index 1, */
+  /* background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(117, 19, 93, 0.73)); */
   z-index: 1;
   overflow: hidden;
 
@@ -13,16 +14,19 @@
 
 .popup-box, img {
   position: relative;
-  width: 70%;
+  width: 50%;
   margin: 0 auto;
   height: auto;
+
   /* max-height: 70vh; */
   margin-top: calc(100vh - 85vh - 20px);
-  background: #fff;
-  border-radius: 4px;
-  /* padding: 20px; */
+  /* background: #fff; */
+  border-radius: 10px;
+  /* background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(117, 19, 93, 0.73)); */
+
+  /* padding: 20px;  */
   /* border: 1px solid #999; */
-  overflow: auto;
+  /* overflow: auto; */
   /* overflow: hidden; */
 }
 
@@ -30,6 +34,19 @@
   display: none;
 }
 
+.popupDataStyling{
+  padding: 20px;
+  background-color: black;
+  color: white;
+}
+
+.galleryNameColor{
+  color: rgb(51, 51, 215);
+}
+
+.pictureGradient{
+  background-image: linear-gradient( rgba(245, 246, 252, 0.52), rgba(117, 19, 93, 0.73));
+}
 
 
 .close-icon {
